# comfyui_hooking_server

./: .gitignore  20260310_220726_dceae894.json  CLAUDE.md  LICENSE  README.md  config.json  kill_server_8188.bat  opencode.json  pyproject.toml  queue_manager.py  requirements.txt  run.bat  run_en.bat  server.py  test_analyze.py  test_quick.py  v3구조.md  복장추적모드설명.md
customprompt/: enhance_outfit_prompt.py  enhance_outfit_prompt_v2.py  enhance_outfit_prompt_v4.py  enhance_outfit_prompt_v8.py  enhance_outfit_prompt_v9.py  enhance_outfit_prompt_v9_nsfw_wildcard.json  haganai_extract_outfit_prompt.py  restore_workflow_prompt_llm_solo.py  restore_workflow_prompt_nikke_style.py  restore_workflow_prompt_nikke_style_v2.py  restore_workflow_prompt_nikke_style_v3.py  restore_workflow_prompt_terminater_style.py  복장추출_기본구조.py
customprompt/enhance_outfit_prompt_v4_storage/: characters.txt  hasegawa_kobato.json  hasegawa_kodaka.json  kashiwazaki_sena.json  mikazuki_yozora.json  oreki_houtarou.json  redfield_stella.json  takayama_maria.json
frontend/: index.html
modes/: __init__.py  asset_mode.py  asset_tool_mode.py  autocomplete_service.py  batch_mode.py  bot_lora_mode.py  bot_mode.py  chain_preset_mode.py  dwpose_standalone.py  embedding_service.py  illust_prompt_builder.py  instance_lora_mode.py  lighbd_service.py  llm_service.py  lora_mode.py  mode_logger.py  openpose_detector.py  outfit_mode.py  pose_mode.py  prompt_enhance_mode.py  prompt_enhance_mode_preprocess.py  tag_classifier.py  wd_tagger_standalone.py
prompts/lighbd/: format.txt  (+5 more)
updater_dev/: build.bat  updater.py
(+46 files in other folders)
